cpp/dae_config/dae_configParser.cpp

// Generated from dae_config.g4 by ANTLR 4.11.1


#include "dae_configListener.h"

#include "dae_configParser.h"


using namespace antlrcpp;
using namespace dae_config;

using namespace antlr4;

namespace {

struct Dae_configParserStaticData final {
  Dae_configParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Dae_configParserStaticData(const Dae_configParserStaticData&) = delete;
  Dae_configParserStaticData(Dae_configParserStaticData&&) = delete;
  Dae_configParserStaticData& operator=(const Dae_configParserStaticData&) = delete;
  Dae_configParserStaticData& operator=(Dae_configParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag dae_configParserOnceFlag;
Dae_configParserStaticData *dae_configParserStaticData = nullptr;

void dae_configParserInitialize() {
  assert(dae_configParserStaticData == nullptr);
  auto staticData = std::make_unique<Dae_configParserStaticData>(
    std::vector<std::string>{
      "start", "literal", "expression", "declaration", "optAnnotation",
      "annotationParameter", "functionPrototype", "parameter", "arrowExpression",
      "arrowOperand", "standaloneFunction"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "':'", "'&&'", "','", "'['", "']'", "'!'", "'('",
      "')'", "'->'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "WHITESPACE", "COMMENT_BLOCK",
      "COMMENT_LINE_SHARP", "ID", "NON_ID", "QUOTE_STRING"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) {
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  dae_configParserStaticData = staticData.release();
}

}

dae_configParser::dae_configParser(TokenStream *input) : dae_configParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

dae_configParser::dae_configParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  dae_configParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *dae_configParserStaticData->atn, dae_configParserStaticData->decisionToDFA, dae_configParserStaticData->sharedContextCache, options);
}

dae_configParser::~dae_configParser() {
  delete _interpreter;
}

const atn::ATN& dae_configParser::getATN() const {
  return *dae_configParserStaticData->atn;
}

std::string dae_configParser::getGrammarFileName() const {
  return "dae_config.g4";
}

const std::vector<std::string>& dae_configParser::getRuleNames() const {
  return dae_configParserStaticData->ruleNames;
}

const dfa::Vocabulary& dae_configParser::getVocabulary() const {
  return dae_configParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView dae_configParser::getSerializedATN() const {
  return dae_configParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

dae_configParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dae_configParser::StartContext::EOF() {
  return getToken(dae_configParser::EOF, 0);
}

std::vector<dae_configParser::ExpressionContext *> dae_configParser::StartContext::expression() {
  return getRuleContexts<dae_configParser::ExpressionContext>();
}

dae_configParser::ExpressionContext* dae_configParser::StartContext::expression(size_t i) {
  return getRuleContext<dae_configParser::ExpressionContext>(i);
}


size_t dae_configParser::StartContext::getRuleIndex() const {
  return dae_configParser::RuleStart;
}

void dae_configParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void dae_configParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

dae_configParser::StartContext* dae_configParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, dae_configParser::RuleStart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == dae_configParser::ID) {
      setState(22);
      expression();
      setState(27);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(28);
    match(dae_configParser::EOF);

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

dae_configParser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dae_configParser::LiteralContext::ID() {
  return getToken(dae_configParser::ID, 0);
}

tree::TerminalNode* dae_configParser::LiteralContext::NON_ID() {
  return getToken(dae_configParser::NON_ID, 0);
}

tree::TerminalNode* dae_configParser::LiteralContext::QUOTE_STRING() {
  return getToken(dae_configParser::QUOTE_STRING, 0);
}


size_t dae_configParser::LiteralContext::getRuleIndex() const {
  return dae_configParser::RuleLiteral;
}

void dae_configParser::LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteral(this);
}

void dae_configParser::LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteral(this);
}

dae_configParser::LiteralContext* dae_configParser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 2, dae_configParser::RuleLiteral);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    _la = _input->LA(1);
    if (!(((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 229376) != 0)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

dae_configParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dae_configParser::ExpressionContext::ID() {
  return getToken(dae_configParser::ID, 0);
}

std::vector<dae_configParser::ArrowExpressionContext *> dae_configParser::ExpressionContext::arrowExpression() {
  return getRuleContexts<dae_configParser::ArrowExpressionContext>();
}

dae_configParser::ArrowExpressionContext* dae_configParser::ExpressionContext::arrowExpression(size_t i) {
  return getRuleContext<dae_configParser::ArrowExpressionContext>(i);
}

std::vector<dae_configParser::DeclarationContext *> dae_configParser::ExpressionContext::declaration() {
  return getRuleContexts<dae_configParser::DeclarationContext>();
}

dae_configParser::DeclarationContext* dae_configParser::ExpressionContext::declaration(size_t i) {
  return getRuleContext<dae_configParser::DeclarationContext>(i);
}

std::vector<dae_configParser::StandaloneFunctionContext *> dae_configParser::ExpressionContext::standaloneFunction() {
  return getRuleContexts<dae_configParser::StandaloneFunctionContext>();
}

dae_configParser::StandaloneFunctionContext* dae_configParser::ExpressionContext::standaloneFunction(size_t i) {
  return getRuleContext<dae_configParser::StandaloneFunctionContext>(i);
}

std::vector<dae_configParser::LiteralContext *> dae_configParser::ExpressionContext::literal() {
  return getRuleContexts<dae_configParser::LiteralContext>();
}

dae_configParser::LiteralContext* dae_configParser::ExpressionContext::literal(size_t i) {
  return getRuleContext<dae_configParser::LiteralContext>(i);
}

std::vector<dae_configParser::ExpressionContext *> dae_configParser::ExpressionContext::expression() {
  return getRuleContexts<dae_configParser::ExpressionContext>();
}

dae_configParser::ExpressionContext* dae_configParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<dae_configParser::ExpressionContext>(i);
}


size_t dae_configParser::ExpressionContext::getRuleIndex() const {
  return dae_configParser::RuleExpression;
}

void dae_configParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void dae_configParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}

dae_configParser::ExpressionContext* dae_configParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 4, dae_configParser::RuleExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(32);
    match(dae_configParser::ID);
    setState(33);
    match(dae_configParser::T__0);
    setState(41);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 229632) != 0) {
      setState(39);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(34);
        arrowExpression();
        break;
      }

      case 2: {
        setState(35);
        declaration();
        break;
      }

      case 3: {
        setState(36);
        standaloneFunction();
        break;
      }

      case 4: {
        setState(37);
        literal();
        break;
      }

      case 5: {
        setState(38);
        expression();
        break;
      }

      default:
        break;
      }
      setState(43);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(44);
    match(dae_configParser::T__1);

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

dae_configParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dae_configParser::DeclarationContext::ID() {
  return getToken(dae_configParser::ID, 0);
}

std::vector<dae_configParser::FunctionPrototypeContext *> dae_configParser::DeclarationContext::functionPrototype() {
  return getRuleContexts<dae_configParser::FunctionPrototypeContext>();
}

dae_configParser::FunctionPrototypeContext* dae_configParser::DeclarationContext::functionPrototype(size_t i) {
  return getRuleContext<dae_configParser::FunctionPrototypeContext>(i);
}

dae_configParser::OptAnnotationContext* dae_configParser::DeclarationContext::optAnnotation() {
  return getRuleContext<dae_configParser::OptAnnotationContext>(0);
}

std::vector<dae_configParser::LiteralContext *> dae_configParser::DeclarationContext::literal() {
  return getRuleContexts<dae_configParser::LiteralContext>();
}

dae_configParser::LiteralContext* dae_configParser::DeclarationContext::literal(size_t i) {
  return getRuleContext<dae_configParser::LiteralContext>(i);
}


size_t dae_configParser::DeclarationContext::getRuleIndex() const {
  return dae_configParser::RuleDeclaration;
}

void dae_configParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void dae_configParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}

dae_configParser::DeclarationContext* dae_configParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, dae_configParser::RuleDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(46);
      match(dae_configParser::ID);
      setState(47);
      match(dae_configParser::T__2);
      setState(48);
      functionPrototype();
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == dae_configParser::T__3) {
        setState(49);
        match(dae_configParser::T__3);
        setState(50);
        functionPrototype();
        setState(55);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(56);
      optAnnotation();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(58);
      match(dae_configParser::ID);
      setState(59);
      match(dae_configParser::T__2);
      setState(60);
      literal();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == dae_configParser::T__4) {
        setState(61);
        match(dae_configParser::T__4);
        setState(62);
        literal();
        setState(67);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(68);
      optAnnotation();
      break;
    }

    default:
      break;
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptAnnotationContext ------------------------------------------------------------------

dae_configParser::OptAnnotationContext::OptAnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<dae_configParser::AnnotationParameterContext *> dae_configParser::OptAnnotationContext::annotationParameter() {
  return getRuleContexts<dae_configParser::AnnotationParameterContext>();
}

dae_configParser::AnnotationParameterContext* dae_configParser::OptAnnotationContext::annotationParameter(size_t i) {
  return getRuleContext<dae_configParser::AnnotationParameterContext>(i);
}


size_t dae_configParser::OptAnnotationContext::getRuleIndex() const {
  return dae_configParser::RuleOptAnnotation;
}

void dae_configParser::OptAnnotationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptAnnotation(this);
}

void dae_configParser::OptAnnotationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptAnnotation(this);
}

dae_configParser::OptAnnotationContext* dae_configParser::optAnnotation() {
  OptAnnotationContext *_localctx = _tracker.createInstance<OptAnnotationContext>(_ctx, getState());
  enterRule(_localctx, 8, dae_configParser::RuleOptAnnotation);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case dae_configParser::T__5: {
        enterOuterAlt(_localctx, 1);
        setState(72);
        match(dae_configParser::T__5);
        setState(81);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 229376) != 0) {
          setState(73);
          annotationParameter();
          setState(78);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == dae_configParser::T__4) {
            setState(74);
            match(dae_configParser::T__4);
            setState(75);
            annotationParameter();
            setState(80);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(83);
        match(dae_configParser::T__6);
        break;
      }

      case dae_configParser::T__1:
      case dae_configParser::T__7:
      case dae_configParser::T__10:
      case dae_configParser::ID:
      case dae_configParser::NON_ID:
      case dae_configParser::QUOTE_STRING: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnotationParameterContext ------------------------------------------------------------------

dae_configParser::AnnotationParameterContext::AnnotationParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dae_configParser::ParameterContext* dae_configParser::AnnotationParameterContext::parameter() {
  return getRuleContext<dae_configParser::ParameterContext>(0);
}

tree::TerminalNode* dae_configParser::AnnotationParameterContext::ID() {
  return getToken(dae_configParser::ID, 0);
}

dae_configParser::FunctionPrototypeContext* dae_configParser::AnnotationParameterContext::functionPrototype() {
  return getRuleContext<dae_configParser::FunctionPrototypeContext>(0);
}


size_t dae_configParser::AnnotationParameterContext::getRuleIndex() const {
  return dae_configParser::RuleAnnotationParameter;
}

void dae_configParser::AnnotationParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnnotationParameter(this);
}

void dae_configParser::AnnotationParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnnotationParameter(this);
}

dae_configParser::AnnotationParameterContext* dae_configParser::annotationParameter() {
  AnnotationParameterContext *_localctx = _tracker.createInstance<AnnotationParameterContext>(_ctx, getState());
  enterRule(_localctx, 10, dae_configParser::RuleAnnotationParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(87);
      parameter();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(88);
      match(dae_configParser::ID);
      setState(89);
      match(dae_configParser::T__2);
      setState(90);
      functionPrototype();
      break;
    }

    default:
      break;
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionPrototypeContext ------------------------------------------------------------------

dae_configParser::FunctionPrototypeContext::FunctionPrototypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dae_configParser::FunctionPrototypeContext::ID() {
  return getToken(dae_configParser::ID, 0);
}

tree::TerminalNode* dae_configParser::FunctionPrototypeContext::NON_ID() {
  return getToken(dae_configParser::NON_ID, 0);
}

tree::TerminalNode* dae_configParser::FunctionPrototypeContext::QUOTE_STRING() {
  return getToken(dae_configParser::QUOTE_STRING, 0);
}

std::vector<dae_configParser::ParameterContext *> dae_configParser::FunctionPrototypeContext::parameter() {
  return getRuleContexts<dae_configParser::ParameterContext>();
}

dae_configParser::ParameterContext* dae_configParser::FunctionPrototypeContext::parameter(size_t i) {
  return getRuleContext<dae_configParser::ParameterContext>(i);
}


size_t dae_configParser::FunctionPrototypeContext::getRuleIndex() const {
  return dae_configParser::RuleFunctionPrototype;
}

void dae_configParser::FunctionPrototypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionPrototype(this);
}

void dae_configParser::FunctionPrototypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionPrototype(this);
}

dae_configParser::FunctionPrototypeContext* dae_configParser::functionPrototype() {
  FunctionPrototypeContext *_localctx = _tracker.createInstance<FunctionPrototypeContext>(_ctx, getState());
  enterRule(_localctx, 12, dae_configParser::RuleFunctionPrototype);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == dae_configParser::T__7) {
      setState(93);
      match(dae_configParser::T__7);
    }
    setState(96);
    _la = _input->LA(1);
    if (!(((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 229376) != 0)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(97);
    match(dae_configParser::T__8);
    setState(106);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 229376) != 0) {
      setState(98);
      parameter();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == dae_configParser::T__4) {
        setState(99);
        match(dae_configParser::T__4);
        setState(100);
        parameter();
        setState(105);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(108);
    match(dae_configParser::T__9);

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

dae_configParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dae_configParser::ParameterContext::ID() {
  return getToken(dae_configParser::ID, 0);
}

dae_configParser::LiteralContext* dae_configParser::ParameterContext::literal() {
  return getRuleContext<dae_configParser::LiteralContext>(0);
}


size_t dae_configParser::ParameterContext::getRuleIndex() const {
  return dae_configParser::RuleParameter;
}

void dae_configParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void dae_configParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}

dae_configParser::ParameterContext* dae_configParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 14, dae_configParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(114);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(110);
      match(dae_configParser::ID);
      setState(111);
      match(dae_configParser::T__2);
      setState(112);
      literal();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(113);
      literal();
      break;
    }

    default:
      break;
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrowExpressionContext ------------------------------------------------------------------

dae_configParser::ArrowExpressionContext::ArrowExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<dae_configParser::ArrowOperandContext *> dae_configParser::ArrowExpressionContext::arrowOperand() {
  return getRuleContexts<dae_configParser::ArrowOperandContext>();
}

dae_configParser::ArrowOperandContext* dae_configParser::ArrowExpressionContext::arrowOperand(size_t i) {
  return getRuleContext<dae_configParser::ArrowOperandContext>(i);
}


size_t dae_configParser::ArrowExpressionContext::getRuleIndex() const {
  return dae_configParser::RuleArrowExpression;
}

void dae_configParser::ArrowExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrowExpression(this);
}

void dae_configParser::ArrowExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrowExpression(this);
}

dae_configParser::ArrowExpressionContext* dae_configParser::arrowExpression() {
  ArrowExpressionContext *_localctx = _tracker.createInstance<ArrowExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, dae_configParser::RuleArrowExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    arrowOperand();
    setState(117);
    match(dae_configParser::T__10);
    setState(118);
    arrowOperand();
    setState(123);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == dae_configParser::T__10) {
      setState(119);
      match(dae_configParser::T__10);
      setState(120);
      arrowOperand();
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrowOperandContext ------------------------------------------------------------------

dae_configParser::ArrowOperandContext::ArrowOperandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dae_configParser::ArrowOperandContext::ID() {
  return getToken(dae_configParser::ID, 0);
}

std::vector<dae_configParser::FunctionPrototypeContext *> dae_configParser::ArrowOperandContext::functionPrototype() {
  return getRuleContexts<dae_configParser::FunctionPrototypeContext>();
}

dae_configParser::FunctionPrototypeContext* dae_configParser::ArrowOperandContext::functionPrototype(size_t i) {
  return getRuleContext<dae_configParser::FunctionPrototypeContext>(i);
}

dae_configParser::OptAnnotationContext* dae_configParser::ArrowOperandContext::optAnnotation() {
  return getRuleContext<dae_configParser::OptAnnotationContext>(0);
}

dae_configParser::LiteralContext* dae_configParser::ArrowOperandContext::literal() {
  return getRuleContext<dae_configParser::LiteralContext>(0);
}


size_t dae_configParser::ArrowOperandContext::getRuleIndex() const {
  return dae_configParser::RuleArrowOperand;
}

void dae_configParser::ArrowOperandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrowOperand(this);
}

void dae_configParser::ArrowOperandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<dae_configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrowOperand(this);
}

dae_configParser::ArrowOperandContext* dae_configParser::arrowOperand() {
  ArrowOperandContext *_localctx = _tracker.createInstance<ArrowOperandContext>(_ctx, getState());
  enterRule(_localctx, 18, dae_configParser::RuleArrowOperand);
  size_t _la = 0;
